--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Mon Aug 20 22:03:03 2012  fox
 
+     774* driver/fbt_linux.c: Better fix for skipping .init section
+          of drivers loaded after dtrace - avoids paniccing if
+	  we probe on them (eg 'dtrace -n fbt:isofs::').
+
      773* driver/signal.c: Put in the missing assembler code for i386.
 
 Sun Aug 19 16:05:01 2012  fox
