--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+Mon Dec 10 22:23:10 2012  fox
+
+     797* driver/intr.c: 'Fix' for i386 to avoid use of undef structures in
+          Xen hypercall. Not verified. But Apurba reported the issue.
+
+     796* libdtrace/dt_module.c: Fix for core dump on i386 when doing usdt.
+
 Fri Nov 30 19:45:05 2012  fox
 
      795* intr.c: Fix for xen on i386 (not currently supporting this).
