--- a/Changes
+++ b/Changes
@@ -1,3 +1,14 @@
+Mon Feb  4 21:19:52 2013  fox
+
+     802* linux/sys/regset.h: Fix for greg_t conflict with 3.7 kernel.
+
+     801* driver/xen.c: Fix compile issues on 2.6.32 which lack the Xen interface
+          we need.
+
+Fri Jan 25 21:30:43 2013  fox
+
+     800* bug.sh: Remove the dtrace@crisp.demon.co.uk address
+
 Thu Jan 17 22:13:57 2013  fox
 
      799* README: Fix one of the github addresses.
