--- a/Changes
+++ b/Changes
@@ -1,3 +1,19 @@
+Sun Feb 10 00:43:12 2013  fox
+
+     811* Various: User-mode DTrace compiles on ARM (dtrace cmd runs
+          but does not currently get passed the USDT behavior); some
+	  stuff stubbed out in libproc.
+
+	  Kernel does not compile on ARM at present.
+
+     810* libdtrace/dt_link.c: Fix/placeholders for ARM.
+
+     809* linux/sys/elf_arm.h: New file.
+
+     808* tests/makefile: Build sys32 for ARM.
+
+     807* tools/libgcc.pl: Dont do any checks if on ARM.
+
 Tue Feb  5 21:42:17 2013  fox
 
      806* driver/dtrace_linux.c: Fix "pte" unref for <=2.6.24 kernels.
