--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+Fri Mar  1 21:53:13 2013  fox
+
+     817* linux/sys/regset.h: Fix for i386 build after rearranging for
+          ARM.
+
 Thu Feb 21 23:25:12 2013  fox
 
      816* Various: Changes to compile on 3.6.8/ARM/RaspberryPi kernel.
