--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Thu Jul 11 23:00:12 2013  fox
+
+     839* driver/vminfo.c: Fix for 3.9 kernel.
+
 Sun Jun 23 21:27:38 2013  fox
 
      838* libproc/common/Psymtab.c: Avoid core dump on "dtrace -c ls".
