--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Sun Oct 20 10:48:45 2013  fox
+
+     845* Archive: 1.0151
+
 Sat Oct 19 17:47:23 2013  fox
 
      844* driver/dtrace_linux.c: Fix for /proc/dtrace/trace on 3.11 kernel
