--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+Wed Aug  6 22:22:40 2014  fox
+
+     858* .release
+          Status.txt
+          driver/systrace.c
+	  Fix silly typo left in from debugging 3.7 kernels.
+
 Sat Aug  2 11:36:57 2014  fox
 
      857* driver/Makefile
