--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+Tue Aug 19 22:36:14 2014  fox
+
+     861* cmd/ctfconvert/makefile
+          Build ctfmerge.
+
 Fri Aug 15 23:25:42 2014  fox
 
      860* driver/ctl.c
