Fix broken x_call.c code where I had left in a debug "break", and this would cause us to randomly drop probes from dtrace output depending on which cpu things were happening on. s/execve or the other single shot scripts should now work reliably for single events.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,65 @@
+Tue Mar  3 22:33:03 2015  fox
+
+     864* README
+          Status.txt
+          archive.sh
+          cmd/ctfconvert/barrier.c
+          cmd/ctfconvert/makefile
+          driver/Makefile
+          driver/ctl.c
+          driver/dtrace.c
+          driver/dtrace_asm.c
+          driver/dtrace_linux.c
+          driver/dtrace_linux.h
+          driver/fbt_linux.c
+          driver/instr_linux.c
+          driver/intr.c
+          driver/intr_x86-64.S
+          driver/prov_proc.c
+          driver/systrace.c
+          driver/systrace_asm.S
+          driver/taskq.c
+          driver/toxic.c
+          driver/x_call.c
+          driver-kmem/Makefile
+          driver-kmem/dtrace_kmem.c
+          driver-kmem/mk
+          libdtrace/dt_names.c
+          makefile
+          s/README
+          s/all
+          s/clone
+          s/execve
+          s/fork
+          s/iopl
+          s/rt_sigreturn
+          s/sigaltstack
+          s/sigreturn
+          s/vfork
+          s/vm86
+          s/z
+          s/z1
+          s/z11
+          s/z2
+          s/z3
+          s/z4
+          s/z5
+          s/z6
+          s/z7
+          s/z8
+          s/z9
+          tests/syscalls.c
+          tests/tests.d
+          tools/build.pl
+          tools/kcore.c
+          tools/load.pl
+          tools/mkdriver.pl
+          tools/mkport.pl
+          tools/mksyscall.pl
+          tools/sudo
+          tools/tests.pl
+          Archive: 1.0155
+
 Wed Aug 20 20:59:48 2014  fox
 
      863* driver/systrace_asm.S
